[gd_scene load_steps=7 format=3 uid="uid://djcrf8krdg4hi"]

[ext_resource type="Texture2D" uid="uid://6dolqpscuxsm" path="res://Assets/Sprout Lands - Sprites - Basic pack/Tilesets/Grass.png" id="1_6058o"]
[ext_resource type="Script" uid="uid://btdmy0n0sb14c" path="res://Scripts/Game_MAIN_loop.gd" id="1_puhjw"]
[ext_resource type="PackedScene" uid="uid://c7cppahbc3xsb" path="res://Scenes/Character.tscn" id="2_puhjw"]
[ext_resource type="PackedScene" uid="uid://bfulhptxjo7xj" path="res://Scenes/Field_Object.tscn" id="3_y3812"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kdetr"]
texture = ExtResource("1_6058o")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -5.2159, -4.31661, -3.95689, -5.2159, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -5.2159, -8, -4.85619)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 5.2159, 8, 3.95689, -4.31661, -8, -5.2159, -8, -8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:1/0 = 0
9:2/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, 5.2159, 8, 4.85619)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, -5.2159, -8, -3.95689, 4.31661, 8, 5.2159, 8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, -5.2159, -8, -4.85619, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 5.2159, 8, 4.85619, -8)
3:1/0 = 0
3:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, 5.2159, 4.31661, 3.95689, 5.2159, -8, 8, -8)
4:2/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
8:2/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
10:2/0 = 0
10:3/0 = 0
9:4/0 = 0
8:4/0 = 0
7:4/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
3:4/0 = 0
2:4/0 = 0
1:4/0 = 0
0:4/0 = 0
0:5/0 = 0
0:6/0 = 0
1:6/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
5:6/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_7fta1"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_kdetr")

[node name="Game" type="Node2D"]
script = ExtResource("1_puhjw")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7fta1")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 65536, 1, -2, 65536, 1, 65534, 65536, 1, 131070, 65536, 1, 196606, 65536, 1, -65537, 65536, 1, -1, 65536, 1, 65535, 65536, 1, 131071, 65536, 1, 196607, 0, 5, -131072, 65536, 1, -65536, 65536, 1, 0, 327680, 6, 65536, 65536, 1, 131072, 65536, 1, -131071, 65536, 1, -65535, 65536, 1, 1, 0, 5, 65537, 65536, 1, 131073, 65536, 1, -131070, 65536, 1, -65534, 65536, 1, 2, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, -196612, 0, 0, -196611, 65536, 0, -196610, 65536, 0, -196609, 65536, 0, -262144, 65536, 0, -262143, 65536, 0, -262142, 65536, 0, -262141, 65536, 0, -262140, 131072, 0, 262140, 0, 1, 196604, 0, 1, 131069, 65536, 1, 65533, 65536, 1, 65532, 0, 1, 131068, 0, 1, -4, 0, 1, -65540, 0, 1, -131076, 0, 1, -196604, 131072, 1, -131068, 131072, 1, -65532, 131072, 1, 4, 131072, 1, 65540, 131072, 1, 131076, 131072, 1, 196612, 131072, 1, -131075, 65536, 1, -65539, 65536, 1, -3, 0, 5, 196605, 65536, 1, 262141, 65536, 1, 327677, 65536, 2, -131074, 65536, 1, -131073, 0, 5, -196608, 65536, 1, -196607, 196608, 5, -196606, 65536, 1, -196605, 65536, 1, -131069, 196608, 6, -65533, 65536, 1, 3, 0, 5, 65539, 65536, 1, 131075, 65536, 1, 196611, 0, 5, 262147, 65536, 2, 262146, 65536, 2, 262145, 65536, 2, 262144, 65536, 2, 327679, 65536, 2, 327678, 65536, 2, 262142, 65536, 1, 262143, 65536, 1, 196608, 65536, 1, 196609, 65536, 1, 196610, 65536, 1, 327676, 0, 2, 262148, 131072, 2)

[node name="Character" parent="." instance=ExtResource("2_puhjw")]
position = Vector2(0, -1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 0)
scale = Vector2(0.233034, 0.219052)
zoom = Vector2(3, 3)

[node name="Field_Object" parent="." instance=ExtResource("3_y3812")]
position = Vector2(165, -92)

[node name="Fields" type="Node2D" parent="."]

[connection signal="Player_position" from="Character" to="." method="_on_character_player_position"]
[connection signal="Player_position" from="Character" to="Field_Object" method="_on_character_player_position"]
[connection signal="character_direction" from="Character" to="." method="_on_character_character_direction"]
[connection signal="character_direction" from="Character" to="Field_Object" method="_on_character_character_direction"]
